--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,11 +1,6 @@
-<div class="container">
-  <div class="welcome">
-    <img src="assets/logo.png" width="20%" alt="Commcat logo" />
-    <p class="subtext"><span id="subtext"></span></p>
-    <div class="button-wrapper">
-      <a routerLink="/map">
-        <p>Go to Map</p>
-      </a>
-    </div>
-  </div>
+<div class="flex flex-col items-center justify-center h-full bg-[#faf7eb]">
+  <img src="assets/logo.png" alt="Logo" class="mt-36 mb-8 w-1/2 md:w-1/4" />
+  <p class="text-4xl md:text-4xl text-center"><span id="subtext"></span></p>
+  <a routerLink="/map" class="mt-20"><button type="button" class="text-white bg-[#7f0019] rounded-lg text-md px-5 py-2.5 mr-2 mb-2">Go to Map</button>
+  </a>
 </div>
