--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,13 +1,32 @@
-<div class="navbar-wrapper">
-  <div class="navbar-logo">
-    <a href="/"><img src="assets/logo.png" width="150px" alt="Commcat logo" ></a>
+<nav class="bg-[#f3efe5] border-gray-200">
+  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+    <a href="/" class="flex items-center">
+        <img src="assets/logo.png" class="h-10 mr-3" alt="Flowbite Logo" />
+    </a>
+    <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+        <span class="sr-only">Open main menu</span>
+        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+            <path stroke="#7f0019" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+        </svg>
+    </button>
+    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+      <ul class="font-medium text-xl flex flex-col p-4 md:p-0 mt-4 border rounded-lg md:flex-row md:space-x-8 md:mt-0 md:border-0">
+        <li>
+          <a routerLink="/map" class="block py-2 pl-3 pr-4 text-[#7f0019] rounded md:bg-transparent md:p-0">Map</a>
+        </li>
+        <li>
+          <a routerLink="/about" class="block py-2 pl-3 pr-4 text-[#7f0019] rounded md:bg-transparent md:p-0">About</a>
+        </li>
+        <li>
+          <a routerLink="/donate" class="block py-2 pl-3 pr-4 text-[#7f0019] rounded md:bg-transparent md:p-0">Donate</a>
+        </li>
+        <li>
+          <a routerLink="/submit" class="block py-2 pl-3 pr-4 text-[#7f0019] rounded md:bg-transparent md:p-0">Submit</a>
+        </li>
+        <li>
+          <a routerLink="/login" class="block py-2 pl-3 pr-4 text-[#7f0019] rounded md:bg-transparent md:p-0">Login</a>
+        </li>
+      </ul>
+    </div>
   </div>
-  <div class="navbar-buttons-container">
-    <div class="navbar-button"><a routerLink="/map">Map</a></div>
-    <div class="navbar-button"><a routerLink="/about">About</a></div>
-    <div class="navbar-button"><a routerLink="/donate">Donate</a></div>
-    <div class="navbar-button"><a routerLink="/submit">Submit</a></div>
-    <div class="navbar-button"><a routerLink="/login">Login</a></div>
-  </div>
-</div>
-
+</nav>
