--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="flex flex-col items-center justify-center h-full bg-[#faf7eb]">
+<div class="flex flex-col items-center justify-center">
   <img src="assets/logo.png" alt="Logo" class="mt-36 mb-8 w-1/2 md:w-1/4" />
-  <p class="text-4xl md:text-4xl text-center"><span id="subtext"></span></p>
+  <p class="text-4xl md:text-4xl text-center"><span id="subtext" class="p-2"></span></p>
   <a routerLink="/map" class="mt-20"><button type="button" class="text-white bg-[#7f0019] rounded-lg text-md px-5 py-2.5 mr-2 mb-2">Go to Map</button>
   </a>
 </div>
