about component completed

--- a/client/src/app/components/about/about.component.html
+++ b/client/src/app/components/about/about.component.html
@@ -1,1 +1,68 @@
-<p>about works!</p>
+<div class="p-2 flex flex-col items-center justify-center">
+
+<h1 class="text-2xl mt-4 md:mt-7 text-[#7f0019]">Who are our community cats?</h1>
+
+<div class="mt-5 w-9/10 md:w-4/5 text-center md:text-left">
+  <p>Community cats are cats that reside in public spaces across Singapore. Cats are very territorial and generally roam within a fixed neighbourhood, especially when they are cared for by volunteer feeders!</p>
+  <p class="mt-5">An easy way to identify a community cat is to check if its left ear has been tipped. This signifies that the cat has been sterilised, most likely as part of the <a href="https://catwelfare.org/sterilisation-overview">'Trap-Neuter-Return-Manage' Programme</a>.</p>
+</div>
+
+<h1 class="text-2xl mt-7 text-[#7f0019]">Are they friendly?</h1>
+
+<div class="mt-5 w-9/10 md:w-4/5 text-center md:text-left">
+  <p>It's tough to say!</p>
+  <p class="mt-5">All cats have different personalities, which include how friendly they are towards humans. If you wish to befriend a cat, we recommend you let them approach and sniff you first.</p>
+  <p class="mt-5">If they show signs of fear or aggression, like running away, hissing or hiding, you should give them their space and leave them alone.</p>
+</div>
+
+<h1 class="text-2xl mt-7 text-[#7f0019]">Can I feed them?</h1>
+
+<div class="mt-4 w-9/10 md:w-4/5 text-center md:text-left">
+  <p class="mb-5">If you wish to feed your community cat, please do so responsibly!</p>
+</div>
+<div id="accordion-collapse" data-accordion="collapse" class="w-11/12 md:w-4/5 mb-10">
+  <h2 id="accordion-collapse-heading-1">
+    <button type="button" class="bg-transparent flex items-center justify-between w-full p-5 font-medium text-left text-black border border-b-0 border-[#7f0019] rounded-t-xl focus:ring-1 focus:ring-[#7f0019]" data-accordion-target="#accordion-collapse-body-1" aria-expanded="true" aria-controls="accordion-collapse-body-1">
+      <span>Check for regular feeders</span>
+      <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+        <path stroke="#7f0019" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
+      </svg>
+    </button>
+  </h2>
+  <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1">
+    <div class="p-5 border border-b-0 border-[#7f0019]">
+      <p class="mb-2">If a cat looks like it's well-fed, it probably has a regular feeder. By choosing to feed the cat, you may disrupt its regular feeding schedule, and even contribute to overfeeding.</p>
+      <p class="mb-2">If you're not sure if a cat has a regular feeder, try asking around in relevant community Facebook groups!</p>
+    </div>
+  </div>
+  <h2 id="accordion-collapse-heading-2">
+    <button type="button" class="bg-transparent flex items-center justify-between w-full p-5 font-medium text-left text-black border border-b-0 border-[#7f0019] focus:ring-1 focus:ring-[#7f0019]" data-accordion-target="#accordion-collapse-body-2" aria-expanded="false" aria-controls="accordion-collapse-body-2">
+      <span>Use containers</span>
+      <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+        <path stroke="#7f0019" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
+      </svg>
+    </button>
+  </h2>
+  <div id="accordion-collapse-body-2" class="hidden" aria-labelledby="accordion-collapse-heading-2">
+    <div class="p-5 border border-b-0 border-[#7f0019]">
+      <p class="mb-2">When feeding a community cat, please use containers (e.g. a plastic bowl) for food and water. Feeding food directly from a can is dangerous as they can cut their tongue on the sharp edges.</p>
+      <p class="mb-2">Placing food directly on the ground is unhygienic and can attract pests.</p>
+    </div>
+  </div>
+  <h2 id="accordion-collapse-heading-3">
+    <button type="button" class="bg-transparent flex items-center justify-between w-full p-5 font-medium text-left text-black border border-[#7f0019] focus:ring-1 focus:ring-[#7f0019]" data-accordion-target="#accordion-collapse-body-3" aria-expanded="false" aria-controls="accordion-collapse-body-3">
+      <span>Clean up</span>
+      <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+        <path stroke="#7f0019" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
+      </svg>
+    </button>
+  </h2>
+  <div id="accordion-collapse-body-3" class="hidden" aria-labelledby="accordion-collapse-heading-3">
+    <div class="p-5 border border-t-0 border-[#7f0019]">
+      <p class="mb-2">Once the cat is fed, please clear up the remaining food and/or water immediately! Leaving food out for longer than an hour can cause it to go stale and attract pests. Leaving water out may cause mosquito breeding.</p>
+      <p class="mb-2">By failing to clean up, you may also be committing a crime by littering the environment!</p>
+    </div>
+  </div>
+</div>
+
+</div>
