map now loads dynamic cat info served from api

--- a/client/src/app/components/map/map.component.html
+++ b/client/src/app/components/map/map.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col items-center justify-center h-full">
-  <h1 class="text-3xl mt-10">Cat Map</h1>
+  <h1 class="text-3xl mt-10 text-[#7f0019]">Cat Map</h1>
   <br>
   <p>The information provided in the map below is not definite and should not be taken as such.</p>
   <div *ngIf="apiLoaded | async">
@@ -7,8 +7,16 @@
     <google-map width="990px" height="550px" [options]="options">
       <map-marker #marker="mapMarker" *ngFor="let position of markerPositions" [position]="position" [options]="markerOptions" (mapClick)="openWindow(marker)"></map-marker>
       <map-info-window>
-        <h4>{{ catName }}</h4>
-        <a routerLink="/cat">More Details</a>
+        <div class="max-w-xs" *ngIf="!isLoading; else loading">
+          <h1 class="font-bold text-lg">{{ catName }}</h1>
+          <a [routerLink]="['/cat', catId]" class="text-[#7f0019] mb-2">More Details</a>
+          <img src="{{catImage}}" width="200px" class="mt-2" />
+        </div>
+        <ng-template #loading>
+          <div class="max-w-xs">
+            <img src="assets/loading.gif" width="200px" alt="">
+          </div>
+        </ng-template>
       </map-info-window>
     </google-map>
   </div>
