--- a/client/src/app/components/submit/submit.component.html
+++ b/client/src/app/components/submit/submit.component.html
@@ -87,17 +87,17 @@
       </div>
 
       <div class="mb-6 mt-3">
-        <label for="message" class="block mb-2 text-md font-medium text-gray-900">Dislikes</label>
+        <label for="dislikes" class="block mb-2 text-md font-medium text-gray-900">Dislikes</label>
         <textarea formControlName="dislikes" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-[#7f0019] focus:ring-[#7f0019] focus:border-[#7f0019]" placeholder="Nasty humans, cheap food..."></textarea>
       </div>
 
       <div class="mb-6 mt-3">
-        <label for="message" class="block mb-2 text-md font-medium text-gray-900">Personality</label>
+        <label for="personality" class="block mb-2 text-md font-medium text-gray-900">Personality</label>
         <textarea formControlName="personality" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-[#7f0019] focus:ring-[#7f0019] focus:border-[#7f0019]" placeholder="A true diva..."></textarea>
       </div>
 
       <div class="mb-6 mt-3">
-        <label for="message" class="block mb-2 text-md font-medium text-gray-900">Other Information</label>
+        <label for="other" class="block mb-2 text-md font-medium text-gray-900">Other Information</label>
         <textarea formControlName="other" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-[#7f0019] focus:ring-[#7f0019] focus:border-[#7f0019]" placeholder="Can usually be found sleeping on..."></textarea>
       </div>
 
