styling tweak for header in new thread component

--- a/client/src/app/modules/user/components/new-thread/new-thread.component.html
+++ b/client/src/app/modules/user/components/new-thread/new-thread.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col items-center justify-center h-full">
   <div class="text-center p-5">
-    <h1 class="text-3xl text-[#7f0019]">Post New Thread</h1>
+    <h1 class="text-3xl text-[#7f0019] mt-8">Post New Thread</h1>
     <p class="mt-5">Be nice to your fellow forum members. No profanities, please! </p>
   </div>
 
