--- a/client/src/app/modules/user/components/forums/forums.component.html
+++ b/client/src/app/modules/user/components/forums/forums.component.html
@@ -37,7 +37,7 @@
           <svg class="w-5 h-5 text-gray-800 mr-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 18">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 5h9M5 9h5m8-8H2a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h4l3.5 4 3.5-4h5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1Z"/>
         </svg>
-          {{ thread.comments }} replies</p>
+          {{ thread.comments }}&nbsp; <span *ngIf="thread.comments == 1">reply </span> <span *ngIf="!(thread.comments == 1)">replies</span> </p>
       </div>
       <div class="">
         <a [routerLink]="['/forums/', thread.id]"><button type="button" class="text-white bg-[#7f0019] rounded-lg text-md px-5 py-2.5 mt-2 mr-2 mb-2">View</button></a>
