--- a/client/src/app/modules/user/components/new-thread/new-thread.component.html
+++ b/client/src/app/modules/user/components/new-thread/new-thread.component.html
@@ -1,6 +1,7 @@
 <div class="flex flex-col items-center justify-center h-full">
   <div class="text-center p-5">
     <h1 class="text-3xl text-[#7f0019] mt-8">Post New Thread</h1>
+    <a routerLink="/forums"><button type="button" class="text-white bg-[#7f0019] rounded-lg text-md px-5 py-2.5 mt-2 mr-2">Back</button></a>
     <p class="mt-5">Be nice to your fellow forum members. No profanities, please! </p>
   </div>
 
