--- a/client/src/app/components/donate/donate.component.html
+++ b/client/src/app/components/donate/donate.component.html
@@ -1,1 +1,8 @@
-<p>donate works!</p>
+<div class="flex flex-col items-center justify-center h-full">
+  <div class="text-center p-5">
+    <h1 class="text-3xl text-[#7f0019] mt-5">Donate</h1>
+    <p class="mt-5">Commcat needs your help! You may make a donation below, of which no amount is too small.</p>
+    <p>All proceeds will go towards the running costs of Commcat, including our cat map and image storage.</p>
+    <p>Thank you for your support!</p>
+  </div>
+</div>
