donate component completed

--- a/client/src/app/components/donate/donate.component.html
+++ b/client/src/app/components/donate/donate.component.html
@@ -1,8 +1,32 @@
 <div class="flex flex-col items-center justify-center h-full">
   <div class="text-center p-5">
     <h1 class="text-3xl text-[#7f0019] mt-5">Donate</h1>
-    <p class="mt-5">Commcat needs your help! You may make a donation below, of which no amount is too small.</p>
-    <p>All proceeds will go towards the running costs of Commcat, including our cat map and image storage.</p>
+    <p class="mt-5">
+      Commcat needs your help! You may make a donation below, of which no amount
+      is too small.
+    </p>
+    <p>
+      All proceeds will go towards the running costs of Commcat, including our
+      cat map and image storage.
+    </p>
     <p>Thank you for your support!</p>
   </div>
+
+  <div class="text-left w-full max-w-md p-5">
+    <form [formGroup]="donateForm" (ngSubmit)="pay(donateForm.value['amount'])">
+      <div class="mb-6 mt-5">
+        <label for="cat-name" class="block mb-2 text-md font-medium text-gray-900">Name</label>
+        <input type="text" formControlName="name" class="bg-gray-50 border border-[#7f0019] text-gray-900 text-md rounded-lg focus:ring-[#7f0019] focus:border-[#7f0019] block w-full p-2.5" required>
+      </div>
+
+      <div class="mb-6 mt-5">
+        <label for="cat-name" class="block mb-2 text-md font-medium text-gray-900">Amount (S$)</label>
+        <input type="number" formControlName="amount" class="bg-gray-50 border border-[#7f0019] text-gray-900 text-md rounded-lg focus:ring-[#7f0019] focus:border-[#7f0019] block w-full p-2.5" required>
+      </div>
+
+      <button type="submit" class="text-white bg-[#7f0019] font-medium rounded-lg text-md w-full sm:w-auto px-5 py-2.5 text-center disabled:bg-gray-200" [disabled]="donateForm.invalid">Donate ${{ donateForm.value['amount'] }}</button>
+      </form>
+    </div>
+
+
 </div>
