a few more hotfixes

--- a/client/src/app/modules/admin/components/dashboard/dashboard.component.html
+++ b/client/src/app/modules/admin/components/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
       </svg>
       <span class="sr-only">Info</span>
       <div class="ml-3 text-md font-medium">
-        Cat approved.
+        Submission approved.
       </div>
       <button type="button"
         class="ml-auto -mx-1.5 -my-1.5 bg-green-50 text-green-500 rounded-lg focus:ring-2 focus:ring-green-400 p-1.5 hover:bg-green-200 inline-flex items-center justify-center h-8 w-8"
@@ -38,7 +38,7 @@
       </svg>
       <span class="sr-only">Info</span>
       <div class="ml-3 text-md font-medium">
-        Cat rejected.
+        Submission rejected.
       </div>
       <button type="button"
         class="ml-auto -mx-1.5 -my-1.5 bg-green-50 text-green-500 rounded-lg focus:ring-2 focus:ring-green-400 p-1.5 hover:bg-green-200 inline-flex items-center justify-center h-8 w-8"
